bug fix when changing to dark mode (bottom part of the page turns white)

--- a/style.css
+++ b/style.css
@@ -45,5 +45,6 @@ s {
 .dark {
     background-color: #1B2431;
     color: #fff;
+    min-height: 100vh;
 }
 
